# quizmd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENSE  README.md  RELEASE.md  SECURITY.md  hello-quiz-code.md  pyproject.toml  quizmd.py  requirements.txt
.github/workflows/: ci.yml  release.yml
essays/: pinned-versions-essay.md  requirements-txt-essay.md  requirements-txt-lenient-essay.md  venv-essay.md  venv-lenient-essay.md
multiplayer/: QUIZ_GUIDE.md  README.md  hello-essay.md  hello-imposter.md  hello-quiz.md
multiplayer/client/: README.md  quizmd_client.py
multiplayer/client/examples/: sample-5q.json
multiplayer/server/: README.md  cloudbuild.yaml
multiplayer/server/app/: main.py  models.py  room_store.py
multiplayer/server/tests/: test_server.py
quizzes/: general-science-quiz.md  harry-potter-quiz.md  history-and-civics-quiz.md  math-foundations-quiz.md  python-basics-imposter.md  python-basics-quiz.md  python-code-blocks-quiz.md  python-workspace-setup-quiz.md  world-geography-quiz.md
tests/: test_quizmd.py
